applications/notylus.com/web/base/namespace.yaml
# apps/namespaces/notylus-com.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notylus-com
  labels:
    istio-injection: "enabled"
