applications/notylus.com/web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notylus-com
  name: notylus-com
  namespace: notylus-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notylus-com

  template:
    metadata:
      labels:
        app: notylus-com
    spec:
      containers:
      - image: PLACEHOLDER
        name: notylus-com
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "2048Mi"
        volumeMounts:
          - name: pvc-web-application
            mountPath: /home/node/.n8n
      volumes:
        - name: pvc-web-application
          persistentVolumeClaim:
            claimName: pvc-web-application

status: {}
