applications/notylus.com/web/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway-notylus-com
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
    app: istio-dev
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - PLACEHOLDER
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - PLACEHOLDER
    tls:
      mode: SIMPLE
      credentialName: PLACEHOLDER
